Bug 244632 - Konqueror doesn't disable Link View action on startup
Summary: Konqueror doesn't disable Link View action on startup
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 19:53 UTC by Jan
Modified: 2011-12-15 19:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2010-07-14 19:53:18 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The Link View action in the menu View isn't disabled when starting Konqueror. This is in contrast to the behavior after splitting the view - which makes the action actually useful - and closing the active view afterwards. After that the Link View action is disabled.

Reproducible: Always
Comment 1 Frank Reininghaus 2010-07-14 23:07:02 UTC
Thanks for the bug report! I can confirm this in trunk.
Comment 2 Dawit Alemayehu 2011-12-15 19:07:09 UTC
Git commit d3bf6c0df92dff568d18959e398c780595ea09c9 by Dawit Alemayehu.
Committed on 15/12/2011 at 20:03.
Pushed by adawit into branch 'master'.

Do not enable the "Link View" action initially.

BUG: 244632
FIXED-IN: 4.8.0

M  +1    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/d3bf6c0df92dff568d18959e398c780595ea09c9