Do not enable the "Link View" action initially.

BUG: 244632
FIXED-IN: 4.8.0